ajustes_no_projeto_10_09_2025

--- a/about.html
+++ b/about.html
@@ -20,24 +20,16 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-                atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-                similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+            <p class="apresentacao__conteudo__texto">Formado em Análise e Desenvolvimento de Sistemas, tenho como foco <strong class="titulo-destaque">JavaScript</strong> (Frameworks: <strong class="titulo-destaque">Node JS</strong> e <strong class="titulo-destaque">Angular JS</strong>), TypeScript, Python, HTML, CSS e banco de dados não relacional <strong class="titulo-destaque">MongoDB (NoSQL)</strong>.<br><br>Lido diariamente com atividades de Suporte, tanto para Front-end quanto para Back-end de aplicações web, utilizando ferramentas como <strong class="titulo-destaque">Jira</strong>, <strong class="titulo-destaque">GitHub</strong> e <strong class="titulo-destaque">Insomnia</strong> para chamados de API.
             </p>
             <p class="apresentacao__conteudo__texto">
-                Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
-                eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
-                assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
-                necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
-                rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
-                perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
-                cupidatat non.</p>
+                Busco aprimoramento constante através de cursos em plataformas como Alura, Udemy, ESI Microsoft, KaSolution, entre outras, visando obter Certificações.<br><br>Cargo atual: <strong class="titulo-destaque">Desenvolvedor Full-Stack</strong> na Secretaria Municipal de Urbanismo e Licenciamento, no setor de Supervisão de Licenciamento Eletrônico e Análise de Dados, desde de 2021.</p>
         </section>
-        <img src="./assets/imagem.png" alt="Foto de Perfil do programador César Ribeiro">
+        <img src="./assets/imagem.png" alt="Foto de Perfil do programador César Ribeiro" class="minha-imagem-about">
     </main>
 
     <footer class="rodape">
-        <p>Desenvolvido por Alura.</p>
+        <p>Desenvolvido por César Ribeiro.</p>
     </footer>
 </body>
 
