--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong 
-            class="titulo-destaque">com um Front-end de qualidade!
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a um novo nível, com um <strong 
+            class="titulo-destaque">Front-end de boa qualidade!
             </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Meu nome é César Ribeiro, sou Full-Stack Developer com foco em tecnologias como AngularJS, HTML e CSS. 
-            Auxilio pequenos negócios e designers a colocarem em prática boas ideias. 
-            Vamos conversar?</p>
+            <p class="apresentacao__conteudo__texto">Olá! Meu nome é César Ribeiro, sou um profissional Full-Stack Developer com foco em tecnologias como AngularJS, HTML e CSS.<br><br>Auxilio pequenos negócios e designers a colocarem em prática boas ideias.<br><br>Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
                 <a class="apresentacao__links__navegacao" href="https://github.com/cmribeiro96">
@@ -31,8 +29,8 @@
                     Github
                 </a>
                 <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/cesarmribeiro/">
-                    <img src="./assets/linkedin.png">
-                    linkedin
+                    <img src="./assets/linkedin.png" class="linkedin-icon">   
+                    Linkedin
                 </a>
                 <!-- <a class="apresentacao__links__navegacao" href="">
                     <img src="./assets/twitch.png">
@@ -40,7 +38,7 @@
                 </a> -->
             </div>
         </section>
-        <img src="./assets/imagem.png" alt="Foto de Perfil do programador César Ribeiro">
+        <img src="./assets/imagem.png" alt="Foto de Perfil do programador César Ribeiro" class="minha-imagem">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por César Ribeiro.</p>
