ajustes_no_projeto

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a um novo nível, com um <strong 
             class="titulo-destaque">Front-end de boa qualidade!
             </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Meu nome é César Ribeiro, sou um profissional Full-Stack Developer com foco em tecnologias como AngularJS, HTML e CSS.<br><br>Auxilio pequenos negócios e designers a colocarem em prática boas ideias.<br><br>Vamos conversar?</p>
+            <p class="apresentacao__conteudo__texto">Olá! Meu nome é César Ribeiro, sou um profissional Full-Stack Developer com foco em tecnologias como AngularJS, HTML e CSS.<br><br>Auxilio empresas a colocarem em prática boas ideias.<br><br>Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
                 <a class="apresentacao__links__navegacao" href="https://github.com/cmribeiro96">
