--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
                 <a class="apresentacao__links__navegacao" href="https://github.com/cmribeiro96">
                     <img src="./assets/github.png">
-                    Github
+                    GitHub
                 </a>
                 <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/cesarmribeiro/">
                     <img src="./assets/linkedin.png" class="linkedin-icon">   
